# LexNet

./: .gitignore  README.md  pyproject.toml
lexnet/: knowledge_graph.py  pyproject.toml  verifier.py
lexnet/scraper/: scrape.py
llm_cache/: cache.db
