[tool.poetry]
name = "lexnet"
version = "0.1.0"
description = ""
authors = ["Viraat Das <viraat.laldas@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
graphiti-core = "^0.2.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
